# api/docs/swagger.yaml
@@ -19,8 +19,25 @@ definitions:
         type: string
       updatedAt:
         type: string
-      year:
-        type: integer
+    type: object
+  models.CreateCustomer:
+    properties:
+      createdAt:
+        type: string
+      first_name:
+        type: string
+      gmail:
+        type: string
+      id:
+        type: string
+      last_name:
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+      updatedAt:
+        type: string
     type: object
   models.CreateOrder:
     properties:
@@ -39,7 +56,18 @@ definitions:
       to_date:
         type: string
     type: object
-  models.Customer:
+  models.GetAllCustomerCarsRequest:
+    properties:
+      id:
+        type: string
+      limit:
+        type: integer
+      page:
+        type: integer
+      search:
+        type: string
+    type: object
+  models.GetCustomer:
     properties:
       createdAt:
         type: string
@@ -56,17 +84,6 @@ definitions:
       updatedAt:
         type: string
     type: object
-  models.GetAllCustomerCarsRequest:
-    properties:
-      id:
-        type: string
-      limit:
-        type: integer
-      page:
-        type: integer
-      search:
-        type: string
-    type: object
   models.GetOrder:
     properties:
       amount:
@@ -76,7 +93,7 @@ definitions:
       created_at:
         type: string
       customer:
-        $ref: '#/definitions/models.Customer'
+        $ref: '#/definitions/models.GetCustomer'
       from_date:
         type: string
       id:
@@ -88,6 +105,15 @@ definitions:
       to_date:
         type: string
       updated_at:
+        type: string
+    type: object
+  models.PasswordCustomer:
+    properties:
+      Newpassword:
+        type: string
+      Oldpassword:
+        type: string
+      phone:
         type: string
     type: object
   models.Response:
@@ -141,6 +167,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Get user list
       tags:
       - car
@@ -174,6 +202,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: create a car
       tags:
       - car
@@ -207,6 +237,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: delete a car
       tags:
       - car
@@ -245,6 +277,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: update a car
       tags:
       - car
@@ -285,6 +319,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Get user list
       tags:
       - car
@@ -318,6 +354,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Get user
       tags:
       - car
@@ -325,12 +363,19 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get customer
+      description: Get customer list
       parameters:
-      - description: id
+      - description: page
         in: path
-        name: id
-        required: true
+        name: page
+        type: string
+      - description: limit
+        in: path
+        name: limit
+        type: string
+      - description: search
+        in: path
+        name: search
         type: string
       produces:
       - application/json
@@ -338,7 +383,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Customer'
+            $ref: '#/definitions/models.GetCustomer'
         "400":
           description: Bad Request
           schema:
@@ -351,7 +396,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
-      summary: Get customer
+      security:
+      - ApiKeyAuth: []
+      summary: Get customer list
       tags:
       - customer
     post:
@@ -364,14 +411,14 @@ paths:
         name: customer
         required: true
         schema:
-          $ref: '#/definitions/models.Customer'
+          $ref: '#/definitions/models.CreateCustomer'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Customer'
+            $ref: '#/definitions/models.CreateCustomer'
         "400":
           description: Bad Request
           schema:
@@ -384,6 +431,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: create a customer
       tags:
       - customer
@@ -417,7 +466,43 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: delete a customer
+      tags:
+      - customer
+    get:
+      consumes:
+      - application/json
+      description: Get customer
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.GetCustomer'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get customer
       tags:
       - customer
     put:
@@ -435,14 +520,14 @@ paths:
         name: customer
         required: true
         schema:
-          $ref: '#/definitions/models.Customer'
+          $ref: '#/definitions/models.GetCustomer'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Customer'
+            $ref: '#/definitions/models.GetCustomer'
         "400":
           description: Bad Request
           schema:
@@ -455,9 +540,47 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: update a customer
       tags:
       - customer
+  /customer/password:
+    put:
+      consumes:
+      - application/json
+      description: This api is update paswor a  customer and returns succ
+      parameters:
+      - description: customer
+        in: body
+        name: customer
+        required: true
+        schema:
+          $ref: '#/definitions/models.PasswordCustomer'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: update password
+      tags:
+      - Password
   /customercars:
     get:
       consumes:
@@ -499,6 +622,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Get user list
       tags:
       - customer
@@ -539,6 +664,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Get order list
       tags:
       - order
@@ -572,6 +699,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: create a order
       tags:
       - order
@@ -605,6 +734,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Get order
       tags:
       - order
@@ -643,7 +774,14 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: update a order
       tags:
       - order
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
