# api/router.go
@@ -3,8 +3,9 @@ package api
 import (
 	"clone/rent_car_us/api/handler"
 	"clone/rent_car_us/service"
-	"clone/rent_car_us/storage"
-
+	"errors"
+	"net/http"
+	"clone/rent_car_us/pkg/logger"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -14,18 +15,29 @@ import (
 // @title           Swagger Example API
 // @version         1.0
 // @description     This is a sample server celler server.
-func New(services service.IServiceManager,store storage.IStorage) *gin.Engine {
-	h := handler.NewStrg(store,services)
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+func New(services service.IServiceManager, log logger.ILogger) *gin.Engine {
+	h := handler.NewStrg(services,log)
 
 	r := gin.Default()
+
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	r.Use(authMiddleware)
+	// r.Use(authMiddleware1)
 
 	r.POST("/car", h.CreateCar)
 	r.GET("/car/:id", h.GetByIDCar)
 	r.GET("/car", h.GetAllCars)
 	r.GET("/car/free", h.GetAllCarsFree)
+
+
 	r.PUT("/car/:id", h.UpdateCar)
 	r.DELETE("/car/:id", h.DeleteCar)
-	// r.PATCH("/car/:id", h.UpdateUserPassword)
+
+	r.PUT("/customer/password", h.UpdatePassword)
 
 	r.POST("/customer", h.CreateCustomer)
 	r.GET("/customer/:id", h.GetByIDCustomer)
@@ -40,7 +52,25 @@ func New(services service.IServiceManager,store storage.IStorage) *gin.Engine {
 	r.PUT("/order/:id", h.UpdateOrder)
 	r.DELETE("/order/:id", h.DeleteOrder)
 
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 
 	return r
 }
+
+func authMiddleware(c *gin.Context) {
+	auth := c.GetHeader("Authorization")
+	if auth == "" {
+		c.AbortWithError(http.StatusUnauthorized, errors.New("unauthorized"))
+	}
+	c.Next()
+}
+
+// func authMiddleware1(c *gin.Context) {
+// 	for char1, char := range c.Request.Header() {
+// 		fmt.Println(string(char))
+// 	}
+
+// 	c.Next()
+// }
+
+
