# pkg/check/validator.go
@@ -4,6 +4,7 @@ import (
 	"errors"
 	"time"
 	"strings"
+	"unicode"
 )
 
 func ValidateCarYear(year int) error {
@@ -29,3 +30,39 @@ func ValidatePhone(phone string)error{
 	}
 	}
 	
+
+	func ValidatePassword(password string) error {
+		if len(password) < 8 {
+			return errors.New("password length must be at least 8 characters")
+		}
+	
+		var hasUppercase, hasLowercase, hasDigit, hasSymbol bool
+	
+		for _, char := range password {
+			switch {
+			case unicode.IsUpper(char):
+				hasUppercase = true
+			case unicode.IsLower(char):
+				hasLowercase = true
+			case unicode.IsNumber(char):
+				hasDigit = true
+			case unicode.IsPunct(char) || unicode.IsSymbol(char):
+				hasSymbol = true
+			}
+		}
+	
+		if !hasUppercase {
+			return errors.New("password must contain at least one uppercase letter")
+		}
+		if !hasLowercase {
+			return errors.New("password must contain at least one lowercase letter")
+		}
+		if !hasDigit {
+			return errors.New("password must contain at least one digit")
+		}
+		if !hasSymbol {
+			return errors.New("password must contain at least one symbol")
+		}
+	
+		return nil
+	}
